--- a/style.css
+++ b/style.css
@@ -56,6 +56,11 @@
     text-decoration: none;
 }
 
+.presupuesto a:hover{
+    color: white;
+    transition: 0.5s;
+}
+
 h6 {
     text-decoration: none;
     padding: 10px;
