--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,15 +1,20 @@
 nav{
-    background-color: rgb(119, 138, 118);
+    background-color:white;
      height: 100%;
      margin-bottom: 5px;
-
-    ul{
+     ul{
         font-size: 20px;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        
+        .dropdown-menu {
+        background-color: rgb(8, 104, 128);
+        }
     }
-    .logo_jg{
-        height: 80px;
-        border: solid 2px gray;
+
+      .logo_jg{
+     height: 80px;
+       border: solid 2px gray;
+
     }
 }  
 
