--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -3,4 +3,6 @@
  @import "_footer.scss";
  @import "_carrousel.scss";
  @import "_container.scss";
- @import "_control-de-plagas.scss"
+ @import "_control-de-plagas.scss";
+ @import "contacto.scss";
+ @import"_variables.scss"
