--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -5,4 +5,5 @@
  @import "_container.scss";
  @import "_control-de-plagas.scss";
  @import "contacto.scss";
- @import"_variables.scss"
+ @import"_variables.scss";
+ @import"_empresa.scss";
