--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -90,3 +90,25 @@ nav {
 .mensaje {
   font-size: 20px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
+.container_servicios{
+  background-color: #0471a3;
+}
+.logos_empresa{
+  width: 60px;
+  height: 60px;
+}
+
+.garantia{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border: solid 2px black;
+  
+}
+
+.logo_garantia{
+  width: 100px;
+  height: 100px;
+  padding: 10px;
+  font-family: 'Courier New', Courier, monospace;
+}
