--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,12 +1,12 @@
 
-@import"_footer.scss";
+
 .footer{
     text-align: center;
-    background-color: $color-secondary;
     .parrafo_footer{
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        color: #cfcdcd;
+        color: #070707;
         padding: 15px;
+        font-size: 12px;
     }
 }
 
