--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,7 +1,8 @@
 nav{
-    background-color:white;
+    
      height: 100%;
      margin-bottom: 5px;
+     border-bottom: solid 1px rgb(116, 116, 116);
      ul{
         font-size: 20px;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -10,11 +11,8 @@ nav{
         background-color: rgb(8, 104, 128);
         }
     }
-
-      .logo_jg{
-     height: 80px;
-       border: solid 2px gray;
-
     }
-}  
-
+    .logo_jg{
+       height: 80px;
+       width: 100px;
+      }
