--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -7,3 +7,5 @@
  @import "contacto.scss";
  @import"_variables.scss";
  @import"_empresa.scss";
+ @import "_limpieza.de.tanques";
+ @import "_fumigacion"
