--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -1,18 +1,18 @@
 nav {
-  background-color: white;
   height: 100%;
-  margin-bottom: 5px; }
+  margin-bottom: 5px;
+  border-bottom: solid 1px #747474; }
   nav ul {
     font-size: 20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; }
     nav ul .dropdown-menu {
       background-color: #086880; }
-  nav .logo_jg {
-    height: 80px;
-    border: solid 2px gray; }
+
+.logo_jg {
+  height: 80px;
+  width: 100px; }
 
 .top_nav {
-  background-color: #0471a3;
   display: flex;
   justify-content: space-between;
   padding: 5px; }
@@ -35,6 +35,12 @@ nav {
   height: 30px;
   padding: 5px; }
 
+.carousel-innerm {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100vh; }
+
 .titulos_inicio {
   color: black;
   border-top: 1px solid gray;
@@ -54,12 +60,12 @@ nav {
   color: black; }
 
 .footer {
-  text-align: center;
-  background-color: gray; }
+  text-align: center; }
   .footer .parrafo_footer {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: #cfcdcd;
-    padding: 15px; }
+    color: #070707;
+    padding: 15px;
+    font-size: 12px; }
 
 .carousel-inner {
   position: relative;
@@ -73,11 +79,10 @@ nav {
 .titulo_principal_plagas {
   color: #050505;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
-
-.parrafo_principal_plagas {
-  padding: 20px;
-  color: black;
-  font-family: Verdana, Geneva, Tahoma, sans-serif; }
+  .titulo_principal_plagas .parrafo_principal_plagas {
+    padding: 20px;
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif; }
 
 .parrafo_plagas {
   padding: 20px;
@@ -87,28 +92,72 @@ nav {
 .titulos_plagas {
   color: blue; }
 
-.mensaje {
-  font-size: 20px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
-.container_servicios{
-  background-color: #0471a3;
-}
-.logos_empresa{
-  width: 60px;
-  height: 60px;
-}
+.subtitulos_plagas {
+  color: black; }
 
-.garantia{
+.tercera_section {
+  background-color: rgba(21, 180, 42, 0.829);
+  text-align: center; }
+  .tercera_section .parrafo_tercera_section {
+    font-size: 30px;
+    padding: 20px;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; }
+
+.card-title {
+  color: black; }
+
+.garantia {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  border: solid 2px black;
-  
-}
+  border-top: 1px solid gray;
+  color: green;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 20px; }
 
-.logo_garantia{
+.logo_garantia {
   width: 100px;
   height: 100px;
+  padding: 10px; }
+
+.mensaje {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
+
+.imagen_contacto {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 70vh; }
+
+.logo_contacto {
+  width: 20px;
+  height: 20px; }
+
+.informacion {
+  padding: 20px;
+  margin: 20px; }
+
+.subtitulo_contacto {
+  color: gray;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+
+.logos_empresa {
+  width: 60px;
+  height: 60px; }
+
+.logo_garantia {
+  width: 100px;
+  height: 100px;
+  padding: 10px; }
+
+.subtitulos_tanques {
+  color: black; }
+
+.titulo_fumigacion {
+  text-align: center;
   padding: 10px;
-  font-family: 'Courier New', Courier, monospace;
-}
+  color: black; }
+
+.subtitulos_fumigacion {
+  color: black; }
