--- a/scss/_control-de-plagas.scss
+++ b/scss/_control-de-plagas.scss
@@ -2,12 +2,15 @@
 .titulo_principal_plagas{
     color: rgb(5, 5, 5);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.parrafo_principal_plagas{
+
+    .parrafo_principal_plagas{
     padding: 20px;
     color: black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
+}
+
 .parrafo_plagas{
     padding: 20px;
     font-size: 17px;
@@ -16,4 +19,37 @@
 .titulos_plagas{
     color: blue;
 }
+.subtitulos_plagas{
+    color: black;
+}
 
+.tercera_section{
+    background-color: rgba(21, 180, 42, 0.829);
+    text-align: center;
+
+    .parrafo_tercera_section{
+       font-size: 30px;
+       padding: 20px;
+       color: white;
+       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+
+}
+
+.card-title{
+    color: black;
+}
+.garantia{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-top: 1px solid gray;
+    color: green;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+  }
+.logo_garantia{
+    width: 100px;
+    height: 100px;
+    padding: 10px;
+  }
