--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -1,7 +1,6 @@
   
-  @import"_variables.scss";
+  
 .top_nav {
-  background-color:$color-primary;
   display: flex;
   justify-content: space-between;
   padding: 5px;
@@ -26,6 +25,19 @@
   height: 30px;
   padding: 5px;
 }
+
+
+
+// EMPIEZA CARROUSEL
+
+.carousel-innerm {
+  position: relative;
+   overflow: hidden;
+   width: 100%;
+   height: 100vh;
+}
+
+// CIERRA CARROUSEL
 
 // EMPIEZA 1RA SECTION============================
 .titulos_inicio {
