--- a/scss/contacto.scss
+++ b/scss/contacto.scss
@@ -1,5 +1,24 @@
 .mensaje{
-   font-size: 20px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+.imagen_contacto{
+   position: relative;
+   overflow: hidden;
+   width: 100%;
+   height: 70vh;
+}
+.logo_contacto{
+   width: 20px;
+   height: 20px;
+}
+
+.informacion{
+   padding: 20px;
+   margin: 20px;
+}
+
+.subtitulo_contacto{
+   color: gray;
+   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
