--- a/scss/_empresa.scss
+++ b/scss/_empresa.scss
@@ -1,8 +1,12 @@
+.parrafo{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 15px;
+}
+
 .logos_empresa{
     width: 60px;
     height: 60px;
   }
-  
   
   
   .logo_garantia{
@@ -10,3 +14,5 @@
     height: 100px;
     padding: 10px;
   }
+
+  
