--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,6 +2,8 @@
 
 .footer{
     text-align: center;
+    background-color: gray;
+    width: 100%;
     .parrafo_footer{
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         color: #070707;
