--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -1,3 +1,5 @@
+
+@import "_variables.scss";
  @import "_nav.scss";
  @import "_inicio.scss";
  @import "_footer.scss";
@@ -5,7 +7,8 @@
  @import "_container.scss";
  @import "_control-de-plagas.scss";
  @import "contacto.scss";
- @import"_variables.scss";
  @import"_empresa.scss";
- @import "_limpieza.de.tanques";
- @import "_fumigacion"
+ @import "_limpieza.de.tanques.scss";
+ @import "_fumigacion.scss";
+ @import "_commons.scss";
+ 
