--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -15,9 +15,8 @@ p{
 }
 // MAP===
 $paleta:(
-    'uno':rgb(0, 0, 0),
-    'dos':gray,
-    'tres':Georgia, 'Times New Roman', Times, serif,
-    'cuatro':15px,
-)
+    'uno':rgb(0, 68, 255),
+    'dos':rgb(209, 209, 209),
+    'tres':15px,
+);
 
