--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,7 +2,7 @@
 
 .footer{
     text-align: center;
-    background-color: gray;
+    background-color: map-get($map: $paleta, $key:dos);
     width: 100%;
     .parrafo_footer{
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
