--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,7 +1,7 @@
-// @import "./variables";
+@import "./commons";
 
 .top_nav{
-    background-color: map-get($map:paleta, $key:uno );
+    background-color: map-get($map:$paleta,$key:'uno');
 }
 
 nav{
