--- a/scss/_carrousel.scss
+++ b/scss/_carrousel.scss
@@ -1,7 +1,11 @@
 
-.carousel-inner{
-    position: relative;
-    width: 100%;
-    overflow: hidden;
-    height: 60vh;
+// .d-block{
+//     height: 400px;
+//     position: relative;
+//     overflow: hidden;
+
+// }
+
+.d-block{
+    margin-top: 100px;
 }
