--- a/scss/_fumigacion.scss
+++ b/scss/_fumigacion.scss
@@ -1,8 +1,20 @@
 .titulo_fumigacion{
  text-align: center;
  padding: 10px;
- color: black;
+ color: rgba(14, 92, 209, 0.555);
 }
 .subtitulos_fumigacion{
     color: black;
+}
+
+
+.d-grid{
+    transition: all 440ms ease;
+    height: 200px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.d-grid :hover{
+    box-shadow: 5px 5px 20px rgb(5, 5, 5);
+    transform: translateY(-3%);
 }
