--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -8,28 +8,40 @@ p {
   color: gray;
   font-family: Arial; }
 
-.top_nav {
-  background-color: #0044ff; }
+.parrafo_top {
+  color: black; }
+
+.navbar-brand {
+  width: 20px;
+  height: 80px; }
+  .navbar-brand .logo_jg {
+    height: 80;
+    border-radius: 10px; }
 
 nav {
-  height: 100%;
-  margin-bottom: 5px;
-  border-bottom: solid 1px #747474; }
+  background-color: rgba(13, 179, 165, 0.637);
+  margin-bottom: 200px; }
   nav ul {
     font-size: 20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; }
     nav ul .dropdown-menu {
-      background-color: aqua; }
+      background-color: white; }
 
 .logo_jg {
   height: 80px;
   width: 100px; }
+
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box; }
 
 .top_nav {
   display: flex;
   justify-content: space-between;
   padding: 5px; }
   .top_nav p {
+    padding: px;
     text-align: center;
     font-size: 15px; }
 
@@ -75,7 +87,7 @@ nav {
 
 .footer {
   text-align: center;
-  background-color: #d1d1d1;
+  background-color: #b6b6b6;
   width: 100%; }
   .footer .parrafo_footer {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -83,14 +95,15 @@ nav {
     padding: 15px;
     font-size: 12px; }
 
-.carousel-inner {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-  height: 60vh; }
+.d-block {
+  margin-top: 100px; }
 
 .container {
   color: gray; }
+
+.container-plaga {
+  margin: 150px 50px;
+  text-align: center; }
 
 .titulo_principal_plagas {
   color: #050505;
@@ -144,7 +157,7 @@ nav {
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: 70vh; }
+  margin-top: 100px; }
 
 .logo_contacto {
   width: 20px;
@@ -157,6 +170,18 @@ nav {
 .subtitulo_contacto {
   color: gray;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+
+.container_form {
+  background-color: white; }
+
+.container_aside {
+  text-align: center;
+  background-color: black;
+  color: white; }
+
+.titulo_empresa {
+  text-align: center;
+  margin-top: 200px; }
 
 .parrafo {
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -171,16 +196,42 @@ nav {
   height: 100px;
   padding: 10px; }
 
+.titulo_servicio {
+  text-align: center; }
+
+.card-img-top {
+  height: auto;
+  width: auto; }
+
+.card {
+  transition: all 440ms ease; }
+
+.card :hover {
+  box-shadow: 5px 5px 20px #050505;
+  transform: translateY(-3%); }
+
+.container_tanques {
+  margin: 200px 50px 100px; }
+
 .subtitulos_tanques {
   color: black; }
 
 .titulo_fumigacion {
   text-align: center;
   padding: 10px;
-  color: black; }
+  color: rgba(14, 92, 209, 0.555); }
 
 .subtitulos_fumigacion {
   color: black; }
+
+.d-grid {
+  transition: all 440ms ease;
+  height: 200px;
+  font-family: Arial, Helvetica, sans-serif; }
+
+.d-grid :hover {
+  box-shadow: 5px 5px 20px #050505;
+  transform: translateY(-3%); }
 
 h2 {
   font-size: 25x;
