--- a/scss/_control-de-plagas.scss
+++ b/scss/_control-de-plagas.scss
@@ -1,4 +1,11 @@
 
+
+.container-plaga{
+    margin: 150px 50px;
+    text-align: center;
+    
+}
+
 .titulo_principal_plagas{
     color: rgb(5, 5, 5);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
