--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -1,4 +1,8 @@
-  
+  *{
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+  }
   
 .top_nav {
 
@@ -6,6 +10,7 @@
   justify-content: space-between;
   padding: 5px;
   p {
+    padding: px;
     text-align: center;
     font-size: 15px;
   }
@@ -59,6 +64,7 @@
 }
 
 
+
 // EMPIEZA 2DA SECTION=======================================
 
 .segunda_section {
@@ -67,3 +73,4 @@
 .subtitulos {
   color: black;
 }
+
