--- a/scss/_imagenes.scss
+++ b/scss/_imagenes.scss
@@ -10,3 +10,8 @@
       box-shadow: 5px 5px 20px rgb(5, 5, 5);
       margin-top: 100px;
 }
+.img_desinfeccion{
+    width: 90%;
+    text-align: center;
+      box-shadow: 5px 5px 20px rgb(5, 5, 5);
+}
