--- a/scss/_limpieza.de.tanques.scss
+++ b/scss/_limpieza.de.tanques.scss
@@ -6,3 +6,15 @@
 .subtitulos_tanques{
     color: black;
 }
+.d-grid{
+    width: 100%;
+    transition: all 440ms ease;
+    height: 200px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.d-grid :hover{
+    width: 100%;
+    box-shadow: 5px 5px 20px rgb(141, 9, 9);
+    transform: translateY(-3%);
+}
