--- a/scss/_empresa.scss
+++ b/scss/_empresa.scss
@@ -12,11 +12,12 @@
 
 
 .titulos_servicios{
+  .titulos_servicio{
+   text-align: center;
+  }
    
-    .titulo_empresa{
-    text-align: center;
     margin-top: 200px;
-    }
+    
 }
 
 
