--- a/scss/_imagenes.scss
+++ b/scss/_imagenes.scss
@@ -15,3 +15,9 @@
     text-align: center;
       box-shadow: 5px 5px 20px rgb(5, 5, 5);
 }
+
+.img_historia{
+  width: 90%;
+    text-align: center;
+      box-shadow: 5px 5px 20px rgb(5, 5, 5);
+}
