--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,6 +4,7 @@
     background-color: rgb(248, 248, 248);
     border-top: solid 1px black;
     text-align: center;
+
 }
 
 .logo_footer{
@@ -12,5 +13,7 @@
     padding: 10px;
     
 }
-
+.parrafo_footer{
+    font-size: 12px;
+}
 
