--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -77,6 +77,11 @@ nav {
 .img_asesoramiento {
   width: 90%; }
 
+.titulos_trabajos {
+  color: white;
+  text-shadow: 2px 2px black;
+  padding: 10 px; }
+
 .footer {
   display: flex;
   justify-content: center;
