--- a/scss/_control-de-plagas.scss
+++ b/scss/_control-de-plagas.scss
@@ -22,15 +22,18 @@
     color: black;
     padding: 20px;
     font-size: 17px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
-.titulos_plagas{
+.titulo_plagas{
     color: seagreen;
 }
 .subtitulos_plagas{
     color: seagreen;
     .parrafo_plagas{
         color: black;
+        font-family: Arial, Helvetica, sans-serif;
+
     }
 }
 
