--- a/scss/_empresa.scss
+++ b/scss/_empresa.scss
@@ -1,10 +1,9 @@
 .container_empresa{
   margin: 30px;
-  background-color: rgba(128, 128, 128, 0.068);
 
   .parrafo_empresa{
       margin: 10px;
-      color: black;
+      color: rgb(218, 0, 0);
       font-size: 15px;
       padding: 10px;
     }
@@ -18,9 +17,25 @@
 
 
 
-.parrafo_empresa{
+.parrafo_uno{
+  color: black;
+  font-size: 15px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+ 
+  border-right: solid 0.5px gray;
+  padding: 15px;
+  text-align: center;
+}
+.parrafo_dos{
+  padding: 15px;
   color: black;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 15px;
+  border-left: solid 0.5px gray;
+  text-align: center;
+}
+.parrafo_tres{
+  color: black;
   font-size: 15px;
 }
 
@@ -45,8 +60,7 @@
   }
   
 .container_historia{
-  background-color:rgba(128, 128, 128, 0.22);
-  margin: 20px;
+  margin: 10px;
 }
 
   .titulo_empresa{
