--- a/scss/_imagenes.scss
+++ b/scss/_imagenes.scss
@@ -1,8 +1,6 @@
 .img{
     width: 100%; 
   
-    margin: 20px;
-    height: 100%;
 }
 .img_asesoramiento{
     width: 90%;
@@ -19,5 +17,15 @@
 .img_historia{
   width: 90%;
     text-align: center;
-      box-shadow: 5px 5px 20px rgb(5, 5, 5);
+    box-shadow: 5px 5px 20px rgb(5, 5, 5);
+    margin-left: 30px;
+}
+.img_fumigacion{
+  width: 90%;
+  margin-left: 30px;
+   box-shadow: 5px 5px 20px rgb(5, 5, 5);
+}
+
+.img_tanques{
+  width: 100%;
 }
