--- a/scss/_limpieza.de.tanques.scss
+++ b/scss/_limpieza.de.tanques.scss
@@ -18,3 +18,9 @@
     box-shadow: 5px 5px 20px rgb(141, 9, 9);
     transform: translateY(-3%);
 }
+.parrafo_tanques{
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    font-size: 16px;
+
+}
